# Perf_test

./: .gitignore  CMakeLists.txt  TODO.md  build.bat  file_format.txt  setup-essential.ps1
.github/workflows/: ci.yml.bak
butterworth/: CMakeLists.txt  biquad.cpp  butterworth.cpp  butterworth.h  filter_design.cpp  filter_design.h  utils.cpp
cmake/: FindTensorRT.cmake  libbutterworth.cmake
common/: CMakeLists.txt  defines.h  util.cc  util.h
eeg_data/: CMakeLists.txt  eeg_data.cc  eeg_data.h
libtorch/: CMakeLists.txt  tcn_spike.cc  tcn_spike.h  torch_model.cc  torch_model.h
onnxruntime/: CMakeLists.txt  onnx_model.cc  onnx_model.h
res/data/: 1.eeg
res/model/: best.ckpt  best.onnx  best.pt  best.trt
res/result/: onnx_result.txt  resource_usage_log.txt  torch_result.txt  trt_result.txt
tensorRT/: CMakeLists.txt  infer.cpp  infer.h
test/: CMakeLists.txt  ResourceMonitor.cc  ResourceMonitor.h  main.cc
